# SoftDefinedBlocks

./: README.md
src/: CMakeLists.txt  FMradio.html  SoftDefinedBlocks  SoftDefinedBlocks.doxyfile  Suggestions.txt  drag.html  index.html  index_old.html  moveDiv.html  notes.txt  select.html  variables.html
src/Main/: BlockSet.cpp  CMakeList.txt  DataBuffer.hpp  Err.hpp  Error.cpp  Error.hpp  IBlock.hpp  Misc.cpp  Misc.hpp  ProcessScript.cpp  ProcessScript.hpp  SeqControl.cpp  SeqControl.hpp  SimpleParser.cpp  SimpleParser.hpp  Variables.cpp  Variables.hpp  main.cpp  tVar.hpp
src/ProcessBlocks/: FFT.cpp  FFT.hpp  FineTuner.cpp  FineTuner.hpp  IQFFT.cpp  IQFFT.hpp  LanczosCoeff.hpp  PhaseDiscriminator.cpp  PhaseDiscriminator.hpp  Squelch.hpp  downsample.cpp  downsample.hpp  highPassIIR.cpp  highPassIIR.hpp  lowPassFIR.cpp  lowPassFIR.hpp  lowPassRC.cpp  lowPassRC.hpp
src/Scripts/: FM_Radio.sdb  NOAA.sdb
src/Server/: ClientConnect.cpp  ClientConnect.hpp  ServerSocket.cpp  ServerSocket.hpp  Socket.cpp  Socket.hpp  SocketException.hpp  simpleFFT.cpp  simpleFFT.hpp
src/SinkBlocks/: AudioOutput.cpp  AudioOutput.hpp  sinkAudio.cpp  sinkAudio.hpp  sinkFile.hpp
src/SourceBlocks/: RtlSdrsource.cpp  RtlSdrsource.hpp  sourceFile.hpp  sourceFileWav.hpp  sourceRTL.cpp  sourceRTL.hpp  sourceRtlSdr.cpp  sourceRtlSdr.hpp  sourceSine.hpp
src/SpecialBlocks/ADS/: DecodeADS.cpp  DecodeADS.hpp  test.txt
src/SpecialBlocks/MorseCode/: 160105_40.txt  160106_05.txt  DecodeMorseCode.cpp  DecodeMorseCode.hpp
src/SpecialBlocks/MorseCode/tmp/: QRSSMorseTone-v01a.py  aa.sh~
src/SpecialBlocks/Pager/: DecodePager.cpp  DecodePager.hpp
src/SpecialBlocks/X10/: DecodeX10.cpp  DecodeX10.hpp  X10.grc  top_block.py
src/Testing/: test_browser_connection.cpp  test_main.cpp
src/Testing/ExamplePrograms/: SimpleWebserver.c
src/Testing/Python/: WriteReadTest.py  clientWidget.py  pyBlocks.py  readRaw.py  readWav.py  showDataBin.py  socketTest.py  testIBlock.py  wavConverter.py  widget.py  writeWav.py
src/Widgets/: WidgetButton.cpp  WidgetButton.hpp  WidgetCommStats.cpp  WidgetCommStats.hpp  WidgetCommon.cpp  WidgetCommon.hpp  WidgetContainer.cpp  WidgetContainer.hpp  WidgetGraph.cpp  WidgetGraph.hpp  WidgetMenu.cpp  WidgetMenu.hpp  WidgetRadio.cpp  WidgetRadio.hpp  WidgetSelect.cpp  WidgetSelect.hpp  WidgetSlider.cpp  WidgetSlider.hpp  WidgetText.cpp  WidgetText.hpp  WidgetVarList.cpp  WidgetVarList.hpp  iWidget.cpp  iWidget.hpp
src/html/: FM_Radio.div  aa.html  calMarkers.html  demoCanvasLayers.html  divPositions.html  drawMove.html  index.html  main.css  testGraph.html  verticalLevel.html  widgets.js
